// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeInner is high contrast mode enabled: {"enableHighContrast": false, "highContrastMode": false} 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
>
  <body
    className="theme-switcher"
  />
</HelmetWrapper>
`;

exports[`ThemeInner is high contrast mode enabled: {"enableHighContrast": false, "highContrastMode": true} 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
>
  <body
    className="theme-switcher"
  />
</HelmetWrapper>
`;

exports[`ThemeInner is high contrast mode enabled: {"enableHighContrast": true, "highContrastMode": false} 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
>
  <body
    className="theme-switcher"
  />
</HelmetWrapper>
`;

exports[`ThemeInner is high contrast mode enabled: {"enableHighContrast": true, "highContrastMode": true} 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
>
  <body
    className="theme-switcher high-contrast-theme"
  />
</HelmetWrapper>
`;
